// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`reducers.ack.ackReducer > should reduce addContext 1`] = `
{
  "123": {
    "actionCreator": "my super action creator",
    "data": {
      "foo": "bar",
    },
  },
}
`;

exports[`reducers.ack.ackReducer > should reduce deleteACK 1`] = `
{
  "456": {
    "foo": "bar",
  },
}
`;

exports[`reducers.ack.ackReducer > should reduce receiveMessage 1`] = `
{
  "123": {
    "foo": "bar",
    "received": true,
  },
  "456": {
    "foo": "bar",
  },
}
`;

exports[`reducers.ackProcessed higher order reducer > should reduce addContext 1`] = `
{
  "ack": {
    "123": {
      "actionCreator": "my super action creator",
      "data": {
        "foo": "bar",
      },
    },
  },
}
`;

exports[`reducers.ackProcessed higher order reducer > should reduce deleteACK 1`] = `
{
  "ack": {
    "456": {
      "foo": "bar",
    },
  },
}
`;

exports[`reducers.ackProcessed higher order reducer > should reduce receiveMessage 1`] = `
{
  "ack": {
    "123": {
      "foo": "bar",
      "received": true,
    },
    "456": {
      "foo": "bar",
    },
  },
}
`;
